# dagster-demo

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  grpc_entrypoint.sh  pyproject.toml  render.yaml  workspace.yaml
dagit/: Dockerfile  dagster.yaml  entrypoint.sh  requirements.txt  workspace.yaml
dagster_demo/: repo.py  setup.py
dagster_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dagster_demo/dagster_demo/: pipelines.py  solids.py
dagster_demo/dagster_demo_tests/: test_dagster_demo.py  test_pipelines.py
team_a_repository/: Dockerfile  entrypoint.sh  requirements.txt
team_a_repository/team_a_repository/: modes.py  pipelines.py  repo.py  schedules.py
team_a_repository/team_a_repository_tests/: test_pipelines.py
team_b_repository/: Dockerfile  entrypoint.sh  requirements.txt  setup.py
team_b_repository/dagster_demo.egg-info/: PKG-INFO  SOURCES.txt
team_b_repository/team_b_repository/: pipelines.py  repo.py
team_b_repository/team_b_repository_tests/: test_pipelines.py  test_version.py
