[tool.poetry]
name = "dagster-demo"
version = "0.1.0"
description = ""
authors = ["Sashank Thupukari <s@thupukari.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^0.9.7"
dagit = "^0.9.7"
dagster_cron = "^0.9.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
